--- a/lab4/package.json
+++ b/lab4/package.json
@@ -13,6 +13,7 @@
     "-": "^0.0.1",
     "body-parser": "^1.20.0",
     "connect": "^3.7.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "g": "^2.0.1",
     "nodemon": "^2.0.15"
