--- a/lab4/package.json
+++ b/lab4/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "g": "^2.0.1",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.15"
   }
 }
