--- a/Lab5/package.json
+++ b/Lab5/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.1.3",
     "connect": "^3.7.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
