--- a/Lab5/package.json
+++ b/Lab5/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
     "connect": "^3.7.0",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "g": "^2.0.1",
     "method-override": "^3.0.0",
     "nodemon": "^2.0.15",
